tests/NormalTests/paczka1/small_fuzzy/44291510.err
Error in line 3: FE9IEH S595 15,1
Error in line 7: 0eUjhT A268 146,4
